<resources>
    <string name="app_name">PraAsessment</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="persegi_panjang">Persegi Panjang</string>
    <string name="panjang_sisi">Panjang sisi</string>
    <string name="lebar_sisi">Lebar sisi</string>
    <string name="hitung">Hitung</string>
    <string name="luas">Luas =</string>
    <string name="nol">0</string>
    <string name="keliling">Keliling</string>
    <string name="share">Share</string>
    <string name="segitiga">Segitiga</string>
    <string name="alas">alas</string>
    <string name="tinggi">tinggi</string>
    <string name="aliyyulman_jihan">Aliyyulman Jihan</string>
    <string name="_6706184070">6706184070</string>
</resources>
