<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto">
<FrameLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context=".fragment.PersegiPanjangFragment">
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <!-- TODO: Update blank fragment layout -->
        <TextView
                android:id="@+id/tv_persegipanjang"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/persegi_panjang"
                android:layout_marginTop="32dp"
                android:textSize="20sp"
                app:layout_constraintStart_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

        <EditText
                android:id="@+id/ed_angka01"
                android:layout_width="400dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="80dp"
                android:hint="@string/panjang_sisi"
                android:inputType="textPersonName"
                app:layout_constraintStart_toStartOf="@+id/tv_persegipanjang"
                app:layout_constraintEnd_toEndOf="@+id/tv_persegipanjang"
                app:layout_constraintTop_toTopOf="@+id/tv_persegipanjang"
                app:layout_constraintHorizontal_bias="1.0"/>

        <EditText
                android:id="@+id/ed_angka02"
                android:layout_width="400dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="80dp"
                android:hint="@string/lebar_sisi"
                android:inputType="textPersonName"
                app:layout_constraintStart_toStartOf="@+id/ed_angka01"
                app:layout_constraintEnd_toEndOf="@+id/ed_angka01"
                app:layout_constraintTop_toTopOf="@+id/ed_angka01"
                app:layout_constraintHorizontal_bias="1.0"/>

        <Button
                android:id="@+id/btn_hitungPersegi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/hitung"
                app:layout_constraintStart_toStartOf="@+id/ed_angka02"
                app:layout_constraintEnd_toEndOf="@+id/ed_angka02"
                app:layout_constraintTop_toBottomOf="@+id/ed_angka02"/>

        <TextView
                android:id="@+id/tv_luas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/luas"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="@+id/btn_hitungPersegi"
                app:layout_constraintEnd_toEndOf="@+id/btn_hitungPersegi"
                app:layout_constraintTop_toBottomOf="@+id/btn_hitungPersegi"/>

        <TextView
                android:id="@+id/tv_nolatas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/nol"
                android:textSize="30sp"
                app:layout_constraintStart_toStartOf="@+id/tv_luas"
                app:layout_constraintEnd_toEndOf="@+id/tv_luas"
                app:layout_constraintTop_toBottomOf="@+id/tv_luas"/>
        <TextView
                android:id="@+id/tv_keliling"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/keliling"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="@+id/tv_nolatas"
                app:layout_constraintEnd_toEndOf="@+id/tv_nolatas"
                app:layout_constraintTop_toBottomOf="@+id/tv_nolatas"/>

        <TextView
                android:id="@+id/tv_nolbawah"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/nol"
                android:textSize="30sp"
                app:layout_constraintStart_toStartOf="@+id/tv_keliling"
                app:layout_constraintEnd_toEndOf="@+id/tv_keliling"
                app:layout_constraintTop_toBottomOf="@+id/tv_keliling"/>

        <Button
                android:id="@+id/btn_share"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/share"
                app:layout_constraintStart_toStartOf="@+id/tv_nolbawah"
                app:layout_constraintEnd_toEndOf="@+id/tv_nolbawah"
                app:layout_constraintTop_toBottomOf="@+id/tv_nolbawah"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>
</layout>